# hexchat

./: meson.build  meson_options.txt
plugins/python/: _hexchat.py
src/: meson.build
src/common/: meson.build
src/fe-cocoa/: fe-cocoa.h  fe-cocoa.m  meson.build
src/fe-gtk/: meson.build
